# compsci-oop

./: CMakeLists.txt  README.md  app.cpp  app.hpp  main.cpp  sample.json
backend/classes/: ccallmanager.cpp  ccallmanager.hpp
backend/classes/calls/: cburglarycall.cpp  cburglarycall.hpp  cfirecall.cpp  cfirecall.hpp  cmedicalcall.cpp  cmedicalcall.hpp  cshootingcall.cpp  cshootingcall.hpp
backend/classes/units/: cfireunit.cpp  cfireunit.hpp  cmedicalunit.cpp  cmedicalunit.hpp  cpoliceunit.cpp  cpoliceunit.hpp
backend/enums/: eincidents.hpp  eunits.hpp
backend/interfaces/: idispatchableunit.hpp  iemergencycall.hpp
gui/: window.cpp  window.hpp
memassets/: logo.hpp
widgets/: widgets.hpp
widgets/impl/: loaders.cpp  navbar.cpp
